--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Game.GameMain"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IntroductionActivity1"/>
-        <activity android:name=".IntroductionActivity2"/>
-        <activity android:name=".Game.GameMain"/>
         <activity android:name=".Game.GamePlay"/>
         <activity android:name=".Game.GameCurrentResult"/>
         <activity android:name=".Game.GameResult"/>
